--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   */
   /*Shorthand - Atalho*/
   background: var(--bg-url) no-repeat top center / cover;
+  height: 100vp;
 }
 
 body * {
@@ -168,4 +169,15 @@ footer {
   justify-content: center;
   padding: 24px 0;
   font-size: 14px;
+}
+
+/* media queries */
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
